122
- Added bottom (btm) (successor to ytop) - all arch except Generic
- Update file to 5.40
- Update mc to 4.8.26
- Update mtpfs to 2021-05-14
- Update oniguruma to 6.9.7.1
- Update stress-ng to 0.12.09
- Update unrar to 6.0.6
- Update vim to 8.2.2879


121
- remove strace

120
- htop: update to 3.0.5
- i2c-tools: fix runtime libraries
- strace: fix compile on Generic due to mpers
- stress-ng: update to 0.12.02

119
- dstat: update to 2020-06-19
- efibootmgr: update version details
- efivar: update to 2020-10-16
- hddtemp: add patch to support nvme drives
- nmon: update to 16m

118
- i2c-tools: update to 4.2
- lm_sensors: update to 3.6.0

117
- fdupes: update to 2.1.2
- htop: update to 3.0.4
- i2c-tools: update to 3.1.2+patches
- inotify-tools: update to 3.20.11.0
- libmtp: update to 1.1.18
- libssh2: update to 1.9.0
- oniguruma: update to 6.9.6
- smartmontools: update to 7.2
- strace: update to 5.10
- stress-ng: update to 0.12.01
- usb-modeswitch: update to 2.6.1
- vim: update to 8.2.2293

116
- added st (Generic only)
- updated unrar to 6.0.3
- updated mc to 4.8.25
- removed ytop

115
- updated strace to 5.9

114
- added ytop
- fixed 7z
- updated diffutils to 3.7
- updated efibootmgr to 2020-04-27
- updated evtest to 1.34
- updated fdupes to 2.0.0
- updated file to 5.39
- updated lshw to 2.19.2
- updated screen to 4.8.0
- updated strace to 5.7
- updated stress-ng to 0.11.14
- updated unrar to 5.9.3
- dropped mrxvt

113
- update strace to 5.4

112
- added vim runtime files
- updated vim

111
- updated autossh to 1.4g
- updated file to d1ff3af
- updated htop to 3.0.0 Beta5
- updated jq to 1.6
- updated lm_sensors to e8afbda
- updated patch to 2.7.6
- updated pv to 1.6.6
- updated smartmontools to 7.0
- updated strace to 4.26
- updated stress-ng to 0.09.50
- updated unrar to 5.6.8

110
- updated and improved mc (4.8.21)
- using more compatible "xterm" TERM definition
- updated efibootmgr to 17
- fixed screen

109
- added stress-ng

108